--- a/SpeedoMeter/SpeedoMeter.csproj
+++ b/SpeedoMeter/SpeedoMeter.csproj
@@ -137,7 +137,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Resource Include="alarm clock.ttf" />
+    <Resource Include="src\alarm clock.ttf" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -158,6 +158,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="src\speedometer.png" />
+    <Resource Include="src\speedometer_negative.png" />
+    <Resource Include="src\speedometer_negative_bigger_scale.png" />
+    <Resource Include="src\speedometer_negative_old_scale.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
